# neuro_bot

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ble_debug.py  generate_qr.py  llm_service.py  run.sh  start.sh  test_audio.py  vision_system.launch.py
.cargo/: config.toml
.cargo_backup/: config.toml
docs/plans/: 2026-01-22-qr-bluetooth-flow-design.md  2026-01-22-qr-bluetooth-flow-implementation.md  2026-01-23-brain-core-diagnosing-implementation-plan.md  2026-01-26-ble-tcu-advertisement-design.md  2026-01-26-ble-tcu-response-design.md
src/audio_engine/: package.xml  setup.cfg  setup.py
src/audio_engine/audio_engine/: audio_node.py
src/brain_core/: Cargo.toml  package.xml
src/brain_core/src/: main.rs
src/brain_core/src/modules/: coordinator.rs  emotion.rs  mod.rs  state.rs
src/face_bridge/: Cargo.toml  build.rs  package.xml
src/face_bridge/src/: main.rs
src/iot_controller/: Cargo.toml  package.xml
src/iot_controller/src/: main.rs
src/iot_controller/src/modules/: bluetooth.rs  cellular.rs  mod.rs  servo_serial.rs
src/llm_engine/: package.xml  setup.cfg  setup.py
src/llm_engine/llm_engine/: llm_node.py
src/neuro_bot_bringup/: package.xml  setup.cfg  setup.py
src/neuro_bot_bringup/launch/: all_systems.launch.py
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/msg/: AudioSpeech.msg  BluetoothCommand.msg  BodyCommand.msg  NetworkStatus.msg  RobotState.msg  VisionResult.msg
src/robot_interfaces/srv/: AskLLM.srv  ConnectBluetooth.srv
src/vision_engine/: package.xml  setup.cfg  setup.py
src/vision_engine/test/: test_qr_config.py  test_qr_dedupe.py
src/vision_engine/vision_engine/: qr_config.py  qr_dedupe.py  qr_node.py
