[workspace]
# 这里使用了 Cargo 的 resolver 版本 2，是现代 Rust 项目的标准
resolver = "2"

# 注册所有的成员
members = [
    # "src/robot_interfaces",
    "src/brain_core",
    # "src/audio_engine",
    # "src/face_bridge",
    "src/iot_controller",
]

# 统一管理依赖版本 (非常推荐！避免不同模块用的库版本打架)
[workspace.dependencies]
r2r = "0.9.5"        # ROS 2 的 Rust 绑定
tokio = { version = "1", features = ["full"] } # 异步运行时
serde = "1.0" # JSON 处理
serde_json = "1.0"
anyhow = "1.0"        # 错误处理
log = "0.4"
env_logger = "0.10"
futures = "0.3"
serialport = "4.2"