[package]
name = "brain_core"
version = "0.1.0"
edition = "2024"

[dependencies]
# 引用工作空间统一管理的依赖
r2r = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
