<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>brain_core</name>
  <version>0.1.0</version>
  <description>The Brain Core implemented in Rust</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cargo</buildtool_depend>
  
  <depend>r2r</depend>
  <depend>robot_interfaces</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>