[package]
name = "face_bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
# ✅ Jazzy 必须用 master 分支
r2r = { git = "https://github.com/sequenceplanner/r2r", branch = "master" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.10"
serialport = "4.2"

[build-dependencies]
# ✅ 必须和上面保持一致
r2r = { git = "https://github.com/sequenceplanner/r2r", branch = "master" }

