[package]
name = "face_bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
r2r = { path = "../r2r/r2r" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
serialport = "4.2"  # 硬件依赖

