[package]
name = "iot_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
r2r = { path = "../r2r/r2r" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
# rppal = "0.14" # 如果您用了 rppal 请取消注释，或者根据实际代码添加依赖
btleplug = "0.11" 
uuid = { version = "1.0", features = ["v4", "macro-diagnostics"] }
hex = "0.4" # 用于处理 MAC 地址字符串

