<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>iot_controller</name>
  <version>0.1.0</version>
  <description>IoT Controller Node</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cargo</buildtool_depend>
  
  <depend>robot_interfaces</depend>
  <depend>r2r</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>