<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>llm_engine</name>
  <version>0.0.0</version>
  <description>LLM Engine</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>robot_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
